Resolve merge conflicts

--- a/cavefish-server/.gitignore
+++ b/cavefish-server/.gitignore
@@ -29,7 +29,7 @@ cavefish-server/result-*
 # ====================================================
 # Nix .direnv
 # ====================================================
-.direnv
+.direnv/
 .envrc
 
 # ====================================================
